Working_examples/AWS_host_or_Killercoda/deployments-scar/sidecar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin
        ports:
        - containerPort: 80

      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d

      - name: envoy
        image: envoyproxy/envoy:v1.33-latest
        args: ["-c", "/etc/envoy/envoy.yaml", "--log-level", "info"]
        ports:
        - containerPort: 10000
        - containerPort: 9901
        volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy
      volumes:
      - name: envoy-config
        configMap:
          name: envoy-config
      - name: nginx-conf
        configMap:
          name: nginx-config
