Working_examples/AWS_host_or_Killercoda/deployments-scar/sidecar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
spec:
  selector:
    app: example-app
  ports:
  - port: 10000
    targetPort: 10000
    protocol: TCP
    name: http
